idea/testData/checker/regression/PropertyDeclarationAsExpression.kt
val f = 1 >
        <error descr="[DECLARATION_IN_ILLEGAL_CONTEXT] Declarations are not allowed in this position">val g: Int = 3</error>